{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 27,
  "lineage": "9f8c8c24-579b-0080-2bec-6609c79e0a89",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01a23f7f5cba38ec7",
            "arn": "arn:aws:ec2:us-east-2:104398007503:instance/i-0861f861ee5d84641",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0861f861ee5d84641",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "levelup_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04d0630f1c1d5aae6"
              }
            ],
            "primary_network_interface_id": "eni-04d0630f1c1d5aae6",
            "private_dns": "ip-10-0-101-79.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.79",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a88378c242d7ac26",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2e58da2e1a8475e",
            "tags": {
              "Environmnent": "development",
              "Name": "instance-development"
            },
            "tags_all": {
              "Environmnent": "development",
              "Name": "instance-development"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e1c8f2193fae8a42"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "i-0861f861ee5d84641",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_key_pair.levelup_key",
            "aws_security_group.allow-ssh",
            "module.develop-vpc.module.levelup-vpc.aws_subnet.public",
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:104398007503:security-group/sg-0e1c8f2193fae8a42",
            "description": "security group that allows ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1c8f2193fae8a42",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-development",
            "name_prefix": "",
            "owner_id": "104398007503",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environmnent": "development",
              "Name": "allow-ssh"
            },
            "tags_all": {
              "Environmnent": "development",
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f472a6272eca982f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "sg-0e1c8f2193fae8a42",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:104398007503:network-acl/acl-07ceb5b55303af568",
            "default_network_acl_id": "acl-07ceb5b55303af568",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07ceb5b55303af568",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "104398007503",
            "region": "us-east-2",
            "subnet_ids": [
              "subnet-00ca539184a57015f",
              "subnet-06658bbab7d189afa",
              "subnet-06ada58ac23c3d4a4",
              "subnet-0dedbc6d2a338b611",
              "subnet-0f2e58da2e1a8475e",
              "subnet-0ff17a64c8d041d2e"
            ],
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f472a6272eca982f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:104398007503:route-table/rtb-0253b1926310a430a",
            "default_route_table_id": "rtb-0253b1926310a430a",
            "id": "rtb-0253b1926310a430a",
            "owner_id": "104398007503",
            "propagating_vgws": null,
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f472a6272eca982f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:104398007503:security-group/sg-06da52a68b3a8d0c7",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06da52a68b3a8d0c7",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "104398007503",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f472a6272eca982f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:104398007503:internet-gateway/igw-05efe450eea6e69f4",
            "id": "igw-05efe450eea6e69f4",
            "owner_id": "104398007503",
            "region": "us-east-2",
            "tags": {
              "Environment": "development",
              "Name": "vpc-development",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f472a6272eca982f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05efe450eea6e69f4",
            "id": "r-rtb-01ea1d5da69a904841080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-01ea1d5da69a90484",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-01ea1d5da69a90484"
          },
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_internet_gateway.this",
            "module.develop-vpc.module.levelup-vpc.aws_route_table.public",
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:104398007503:route-table/rtb-05b411b0a88789e0d",
            "id": "rtb-05b411b0a88789e0d",
            "owner_id": "104398007503",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f472a6272eca982f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "rtb-05b411b0a88789e0d",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:104398007503:route-table/rtb-0368e001951de5ee1",
            "id": "rtb-0368e001951de5ee1",
            "owner_id": "104398007503",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f472a6272eca982f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "rtb-0368e001951de5ee1",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:104398007503:route-table/rtb-01ab48621c079ad05",
            "id": "rtb-01ab48621c079ad05",
            "owner_id": "104398007503",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f472a6272eca982f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "rtb-01ab48621c079ad05",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:104398007503:route-table/rtb-01ea1d5da69a90484",
            "id": "rtb-01ea1d5da69a90484",
            "owner_id": "104398007503",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f472a6272eca982f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "rtb-01ea1d5da69a90484",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ad633469d33bd89",
            "region": "us-east-2",
            "route_table_id": "rtb-05b411b0a88789e0d",
            "subnet_id": "subnet-00ca539184a57015f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_route_table.private",
            "module.develop-vpc.module.levelup-vpc.aws_subnet.private",
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e919572b028bdb74",
            "region": "us-east-2",
            "route_table_id": "rtb-0368e001951de5ee1",
            "subnet_id": "subnet-06658bbab7d189afa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_route_table.private",
            "module.develop-vpc.module.levelup-vpc.aws_subnet.private",
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0224919cf82092321",
            "region": "us-east-2",
            "route_table_id": "rtb-01ab48621c079ad05",
            "subnet_id": "subnet-0dedbc6d2a338b611"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_route_table.private",
            "module.develop-vpc.module.levelup-vpc.aws_subnet.private",
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0767ac48dfeeec26b",
            "region": "us-east-2",
            "route_table_id": "rtb-01ea1d5da69a90484",
            "subnet_id": "subnet-0f2e58da2e1a8475e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_route_table.public",
            "module.develop-vpc.module.levelup-vpc.aws_subnet.public",
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d6acd36230b2ecf",
            "region": "us-east-2",
            "route_table_id": "rtb-01ea1d5da69a90484",
            "subnet_id": "subnet-06ada58ac23c3d4a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_route_table.public",
            "module.develop-vpc.module.levelup-vpc.aws_subnet.public",
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7c884dfa3fe58af",
            "region": "us-east-2",
            "route_table_id": "rtb-01ea1d5da69a90484",
            "subnet_id": "subnet-0ff17a64c8d041d2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_route_table.public",
            "module.develop-vpc.module.levelup-vpc.aws_subnet.public",
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:104398007503:subnet/subnet-00ca539184a57015f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ca539184a57015f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "104398007503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f472a6272eca982f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "subnet-00ca539184a57015f",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:104398007503:subnet/subnet-06658bbab7d189afa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06658bbab7d189afa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "104398007503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f472a6272eca982f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "subnet-06658bbab7d189afa",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:104398007503:subnet/subnet-0dedbc6d2a338b611",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dedbc6d2a338b611",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "104398007503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-private-us-east-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f472a6272eca982f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "subnet-0dedbc6d2a338b611",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:104398007503:subnet/subnet-0f2e58da2e1a8475e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2e58da2e1a8475e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "104398007503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-public-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-public-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f472a6272eca982f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "subnet-0f2e58da2e1a8475e",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:104398007503:subnet/subnet-06ada58ac23c3d4a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ada58ac23c3d4a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "104398007503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-public-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-public-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f472a6272eca982f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "subnet-06ada58ac23c3d4a4",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:104398007503:subnet/subnet-0ff17a64c8d041d2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff17a64c8d041d2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "104398007503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "development",
              "Name": "vpc-development-public-us-east-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development-public-us-east-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f472a6272eca982f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "subnet-0ff17a64c8d041d2e",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.develop-vpc.module.levelup-vpc.aws_vpc.this",
            "module.develop-vpc.module.levelup-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.develop-vpc.module.levelup-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:104398007503:vpc/vpc-0f472a6272eca982f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07ceb5b55303af568",
            "default_route_table_id": "rtb-0253b1926310a430a",
            "default_security_group_id": "sg-06da52a68b3a8d0c7",
            "dhcp_options_id": "dopt-083d2c414a8c00d2a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f472a6272eca982f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0253b1926310a430a",
            "owner_id": "104398007503",
            "region": "us-east-2",
            "tags": {
              "Environment": "development",
              "Name": "vpc-development",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "vpc-0f472a6272eca982f",
            "region": "us-east-2"
          }
        }
      ]
    }
  ]
}